--- a/templates/vehicle/_delete_form.html.twig
+++ b/templates/vehicle/_delete_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('vehicle_delete', {'id': vehicle.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ vehicle.id) }}">
-    <button class="btn">Delete</button>
+    <button class="fa-trash"><img src="{{ asset('build/images/trash.svg') }}"></img></button>
 </form>
