--- a/templates/vehicle/edit.html.twig
+++ b/templates/vehicle/edit.html.twig
@@ -9,6 +9,8 @@
 
     <a href="{{ path('vehicle_index') }}">back to list</a>
 
-    {{ include('vehicle/_delete_form.html.twig') }}
+    <div class="">
+        {{ include('vehicle/_delete_form.html.twig') }}
+    </div>
     {% include "_navbar.html.twig" %}
 {% endblock %}
