replaced flex class for homepage

--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -11,12 +11,12 @@
 {% endblock %}
 
 {% block body %}
-	<div class="landing-page">
+	<div class="landing-page flex">
 		<div class="logo-container">
 			<img class="logo" src="{{ asset('build/images/Motorboxcf.png') }}">
 		</div>
 
-		<section class="landing-button-container">
+		<section class="landing-button-container flex">
 			<a class="button" href="{{ path('app_register') }}">
 				S'inscrire
 			</a>
