updated selector to target html

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -76,12 +76,12 @@ body {
 
 // END HOME
 // START LOGIN
-.login-container > form > div {
+.login-row {
     margin: 1rem;
     padding: .5rem;
 }
 
-.login-container > form > button {
+.login-button {
     margin-top: 1rem;
     padding: 1rem 2rem;
 }
