--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -12,18 +12,18 @@
             {% endif %}
 
             <form class="text-align-center" action="{{ path('login') }}" method="post">
-                <div>
+                <div class="login-row">
                     <label for="username">Email:</label>
                     <input type="text" id="username" name="_username" value="{{ last_username }}"/>
                 </div>
-                <div>
+                <div class="login-row">
                     <label for="password">Password:</label>
                     <input type="password" id="password" name="_password"/>
                 </div>
                 {# If you want to control the URL the user is redirected to on success #}
                 <input type="hidden" name="_target_path" value="{{ path('vehicle_index') }}"/>
 
-                <button class="button" type="submit">login</button>
+                <button class="button login-button" type="submit">login</button>
            </form>
         </div>
 	</div>
