--- a/templates/vehicle/show.html.twig
+++ b/templates/vehicle/show.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Vehicle</h1>
 
-    <table class="table">
+    <table>
         <tbody>
             <tr>
                 <th>Id</th>
