--- a/templates/vehicle/_delete_parts_form.html.twig
+++ b/templates/vehicle/_delete_parts_form.html.twig
@@ -1,4 +1,4 @@
 <form method="post" action="{{ path('vehicle_parts_delete', {vehicle: vehicle.id, part: part.id}) }}" onsubmit="return confirm('Are you sure you want to delete this item?');">
     <input type="hidden" name="_token" value="{{ csrf_token('delete' ~ part.id) }}">
-    <button class="btn">Delete</button>
+    <button class="button">Delete</button>
 </form>
