--- a/templates/vehicle/_form.html.twig
+++ b/templates/vehicle/_form.html.twig
@@ -1,5 +1,5 @@
 {{ form_start(form) }}
 {{ form_widget(form) }}<br>
-    <button class="btn">{{ button_label|default('Save') }}</button>
+    <button class="button">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
 
