--- a/templates/vehicle/parts.html.twig
+++ b/templates/vehicle/parts.html.twig
@@ -23,8 +23,12 @@
         {% for part in vehicle.parts %}
         <div class="namePart">
             <label for="{{ part.id }}">{{ part.name }}</label>
-            <a class="button" href="{{ path('vehicle_parts_edit', {vehicle: vehicle.id, part: part.id}) }}">Editer</a>
-            <a class="button" href="{{ path('vehicle_parts_delete', {vehicle: vehicle.id, part: part.id}) }}">Supprimer</a>
+                <a href="{{ path('vehicle_parts_edit', {vehicle: vehicle.id, part: part.id}) }}">
+                    <img class="fa-edit-part" src="{{ asset('build/images/edit-solid.svg') }}"></img>
+                </a>
+                <a href="{{ path('vehicle_parts_delete', {vehicle: vehicle.id, part: part.id}) }}">
+                    <img class="fa-trash-part" src="{{ asset('build/images/trash.svg') }}"></img>
+                </a>
             <progress value = "{{ vehicle.usedHour }}" max = "{{ part.lifespan }}"> </progress>
             <input type="checkbox" name="my-checkbox" id="{{ part.id }}">
         </div>
