--- a/templates/home/home.html.twig
+++ b/templates/home/home.html.twig
@@ -11,11 +11,11 @@
 {% endblock %}
 
 {% block body %}
-	<div class="flex landing-page">
+	<div class="flex container-column">
 
 		{% include "_logo.html.twig" %}
 
-		<section class="flex landing-button-container">
+		<section class="flex container-column">
 			<a class="button" href="{{ path('app_register') }}">
 				S'inscrire
 			</a>
