--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -1,7 +1,7 @@
 {% extends 'base.html.twig' %}
 
 {% block body %}
-    <div class="flex landing-page">
+    <div class="flex container-column">
 
         {% include "_logo.html.twig" %}
 
