--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Register{% endblock %}
 
 {% block body %}
-<div class="flex text-align-center landing-page">
+<div class="flex text-align-center container-column">
 
     {% include "_logo.html.twig" %}
 
