--- a/templates/vehicle/index.html.twig
+++ b/templates/vehicle/index.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Vehicle index{% endblock %}
 
 {% block body %}
-    <section class="flex">
+    <section class="flex container-column">
         {% for vehicle in user.vehicles %}
             <a class="button" href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}" ><p class="box">{{ vehicle.name }}<br>{{ vehicle.brand }} {{ vehicle.model }}</p></a>
         {% endfor %}
