made css changes to the delete and edit icons

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -60,6 +60,14 @@ button {
     width: 2rem;
 }
 
+.fa-trash-part {
+    width: 1.5rem;
+}
+
+.fa-edit-part {
+    width: 2rem;
+}
+
 .nameMotor .box {
     background-color: $color-3;
     margin-left: auto;
