define new background color

--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -13,5 +13,5 @@ $white: #ffffff; // used for .box
 $black: #000000;
 
 // new identity graphique
-$color-body: #f5f5f5;
+$color-body: #f1f1e3;
 $color-blue: #103baf;
