added variable to let the user know what vehicle he want to edit

--- a/templates/vehicle/edit.html.twig
+++ b/templates/vehicle/edit.html.twig
@@ -1,9 +1,9 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Vehicle{% endblock %}
+{% block title %}Modifier {{ vehicle.name }}{% endblock %}
 
 {% block body %}
-    <h1>Edit Vehicle</h1>
+    <h1>Modifier {{ vehicle.name }}</h1>
 
     {{ include('vehicle/_form.html.twig', {'button_label': 'Modifier'}) }}
 
