updated partsShowVehiclePage with new class

--- a/templates/vehicle/parts_show.html.twig
+++ b/templates/vehicle/parts_show.html.twig
@@ -5,7 +5,7 @@
 {% block body %}
     <h1>Part</h1>
 
-    <table class="table">
+    <table>
         <tbody>
             <tr>
                 <th>Name</th>
@@ -18,9 +18,9 @@
         </tbody>
     </table>
 
-    <a href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}">back to list</a>
+    <a class="button" href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}">back to list</a>
 
-    <a href="{{ path('vehicle_parts_edit', {vehicle: vehicle.id, part: part.id}) }}">edit</a>
+    <a class="button" href="{{ path('vehicle_parts_edit', {vehicle: vehicle.id, part: part.id}) }}">edit</a>
 
     {{ include('vehicle/_delete_parts_form.html.twig') }}
 {% endblock %}
