--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,5 +1,5 @@
 <div class="navbar">
-    <a class="aBox conteneur-link" href="{{ path('vehicle_index') }}">Home</a>
+    <a class="navbar-item" href="{{ path('vehicle_index') }}">Home</a>
     <img src="https://picsum.photos/220/50">
-    <a class="aBox conteneur-link" href="{{ path('app_logout') }}">Menu</a>
+    <a class="navbar-item" href="{{ path('app_logout') }}">Menu</a>
 </div>
