--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -42,9 +42,7 @@ body {
     background-color: $color-3;
     color: $bg-color;
     border: 0;
-    box-shadow: rgba(18, 14, 130, 0.88) 0px 2px 4px,
-                rgba(0, 0, 0, 0.3) 0px 7px 13px -3px,
-                rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
+    box-shadow: rgba(18, 14, 130, 0.88) 0px 2px 4px, rgba(0, 0, 0, 0.3) 0px 7px 13px -3px, rgba(0, 0, 0, 0.2) 0px -3px 0px inset;
 }
 
 .title {
