added commentary for explain how used

--- a/templates/_logo.html.twig
+++ b/templates/_logo.html.twig
@@ -1,3 +1,4 @@
+{# include into home, login and register template #}
 <div class="text-align-center logo-container">
     <img class="logo" src="{{ asset('build/images/Motorboxcf.png') }}">
 </div>
