--- a/templates/vehicle/parts.html.twig
+++ b/templates/vehicle/parts.html.twig
@@ -23,8 +23,8 @@
             {% for part in vehicle.parts %}
             <div>
                 <label for="{{ part.id }}">{{ part.name }}</label>
-                <a class="part-button" href="{{ path('vehicle_parts_edit', {vehicle: vehicle.id, part: part.id}) }}">Editer</a>
-                <a class="part-button" href="{{ path('vehicle_parts_delete', {vehicle: vehicle.id, part: part.id}) }}"><img class="fa-trash-part" src="{{ asset('build/images/trash.svg') }}"></img></a>
+                <a class="part-button" href="{{ path('vehicle_parts_edit', {vehicle: vehicle.id, part: part.id}) }}"><img class="fa-edit" src="{{ asset('build/images/edit-solid.svg') }}"></img></a>
+                {{ include('vehicle/_delete_parts_form.html.twig') }}
                 <progress class="progress-part" value = "{{ vehicle.usedHour }}" max = "{{ part.lifespan }}"> </progress>
                 <input class="part-input" type="checkbox" name="my-checkbox" id="{{ part.id }}">
             </div>
