changed shadow on button

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -45,7 +45,7 @@ body {
     border: 0;
     letter-spacing: 0.1em;
     text-transform: uppercase;
-    box-shadow: #103bAF 8px 16px 32px
+    box-shadow: $color-blue-light 8px 16px 32px
 }
 
 .title {
