--- a/templates/vehicle/parts.html.twig
+++ b/templates/vehicle/parts.html.twig
@@ -4,33 +4,43 @@
 
 {% block body %}
 
-    <section class="flex container-column text-align-center">
-        <div class="container-vehicle">
-            <h1> {{ vehicle.name }} <br>
-                {{ vehicle.brand }} <br>
-                {{ vehicle.model }} <br>
-            </h1>
+    <section>
+        <div class="container-vehicle flex">
+            <div>
+                <h1> 
+                    {{ vehicle.model }}<br>
+                </h1>
+                <h2> 
+                    {{ vehicle.brand }} 
+                    {{ vehicle.name }} 
+                </h2>
+            </div>
             <div class= "container-fa-button">
-                {{ include('vehicle/_delete_form.html.twig') }}
-                <a href ="{{ path('vehicle_edit', {id: vehicle.id}) }}">
+                <a class="link-fa-edit" href ="{{ path('vehicle_edit', {id: vehicle.id}) }}">
                     <img class="fa-edit" src="{{ asset('build/images/edit-solid.svg') }}"></img>
                 </a>
+                {{ include('vehicle/_delete_form.html.twig') }}
             </div>
         </div>
 
+        <h2 class="sub-title">Temps d'utilisation total : {{ vehicle.usedHour }}H</h2>
+        
         <div class="container-parts">
-            <h2 class="sub-title">Temps d'utilisation total : {{ vehicle.usedHour }}H</h2>
             {% for part in vehicle.parts %}
             <div>
-                <label for="{{ part.id }}">{{ part.name }}</label>
-                <a class="part-button" href="{{ path('vehicle_parts_edit', {vehicle: vehicle.id, part: part.id}) }}">Editer</a>
-                <a class="part-button" href="{{ path('vehicle_parts_delete', {vehicle: vehicle.id, part: part.id}) }}"><img class="fa-trash-part" src="{{ asset('build/images/trash.svg') }}"></img></a>
+                <div class="space-between">
+                    <label for="{{ part.id }}">{{ part.name }}</label>
+                        <div>
+                            <a class="part-button" href="{{ path('vehicle_parts_edit', {vehicle: vehicle.id, part: part.id}) }}"><img class="fa-edit" src="{{ asset('build/images/edit-solid.svg') }}"></img></a>
+                            <a class="part-button" href="{{ path('vehicle_parts_delete', {vehicle: vehicle.id, part: part.id}) }}"><img class="fa-trash-part" src="{{ asset('build/images/trash.svg') }}"></img></a>
+                        </div>
+                </div>
                 <progress class="progress-part" value = "{{ vehicle.usedHour }}" max = "{{ part.lifespan }}"> </progress>
                 <input class="part-input" type="checkbox" name="my-checkbox" id="{{ part.id }}">
             </div>
             {% endfor %}
-                <a class="button" href="{{ path('vehicle_parts_new', {vehicle: vehicle.id}) }}">Ajouter pièce</a>
         </div>
+                <a class="button" href="{{ path('vehicle_parts_new', {vehicle: vehicle.id}) }}">Ajouter pièce</a>
     </section>
 
 {% endblock %}
