langage french for h1

--- a/templates/vehicle/parts_new.html.twig
+++ b/templates/vehicle/parts_new.html.twig
@@ -3,7 +3,7 @@
 {% block title %}New Part{% endblock %}
 
 {% block body %}
-    <h1>Create new Part</h1>
+    <h1>Créer une nouvelle pièce</h1>
 
     {{ include('part/_form.html.twig') }}
 
