--- a/templates/part/_form.html.twig
+++ b/templates/part/_form.html.twig
@@ -1,4 +1,18 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+
+<div class="flex container-column container-form-part">
+    {{ form_widget(form.name, {
+        label: 'Name',
+        attr: {
+            placeholder: 'Nom'
+        }
+    }) }}
+    {{ form_widget(form.lifespan, {
+        label: 'lifespan',
+        attr: {
+            placeholder: 'Durée de vie'
+        }
+    }) }}<br>
+</div>
+    <button class="button">{{ button_label|default('Save') }}</button>
 {{ form_end(form) }}
