--- a/templates/vehicle/parts_edit.html.twig
+++ b/templates/vehicle/parts_edit.html.twig
@@ -3,11 +3,14 @@
 {% block title %}Modifier {{ part.name }}{% endblock %}
 
 {% block body %}
-    <h1>Modifier {{ part.name }}</h1>
+
+<div class="text-align-center">
+    <h1 class="title-form">Modifier {{ part.name }}</h1>
 
     {{ include('part/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-    <a href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}">Retour sur mes pièces</a>
-
     {{ include('vehicle/_delete_parts_form.html.twig') }}
+    <a class="link-style" href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}">Retour à la liste</a>
+
+</div>
 {% endblock %}
