--- a/templates/vehicle/parts_new.html.twig
+++ b/templates/vehicle/parts_new.html.twig
@@ -3,9 +3,11 @@
 {% block title %}New Part{% endblock %}
 
 {% block body %}
-    <h1>Créer une nouvelle pièce</h1>
+    <div class="text-align-center">
+        <h1 class="title-form">Créer une nouvelle pièce</h1>
 
-    {{ include('part/_form.html.twig') }}
+        {{ include('part/_form.html.twig') }}
 
-    <a href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}">back to list</a>
+        <a class="link-style" href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}">Retour à la liste</a>
+    </div>
 {% endblock %}
