--- a/templates/part/_form.html.twig
+++ b/templates/part/_form.html.twig
@@ -14,5 +14,5 @@
         }
     }) }}<br>
 </div>
-    <button class="button">{{ button_label|default('Save') }}</button>
+    <button class="button">{{ button_label|default('Sauvegarder') }}</button>
 {{ form_end(form) }}
