--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -16,7 +16,7 @@
                     <input type="text" id="username" name="_username" value="{{ last_username }}"/>
                 </div>
                 <div class="login-row">
-                    <label for="password">Password:</label>
+                    <label for="password">Mot de passe:</label>
                     <input type="password" id="password" name="_password"/>
                 </div>
                 {# If you want to control the URL the user is redirected to on success #}
