--- a/templates/vehicle/edit.html.twig
+++ b/templates/vehicle/edit.html.twig
@@ -7,7 +7,7 @@
 
     {{ include('vehicle/_form.html.twig', {'button_label': 'Modifier'}) }}
 
-    <a href="{{ path('vehicle_index') }}">back to list</a>
+    <a href="{{ path('vehicle_index') }}">Retourner à la liste</a>
 
     <div class="">
         {{ include('vehicle/_delete_form.html.twig') }}
