--- a/templates/user/register.html.twig
+++ b/templates/user/register.html.twig
@@ -7,16 +7,22 @@
 
     {% include "_logo.html.twig" %}
 
-    <h1>Register</h1>
+    <h1>Inscription</h1>
     <div>
         {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.email) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
+        {{ form_row(registrationForm.email, {
+        attr: {
+                placeholder: 'luisMotorbox@orange.fr'
+            }
         }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+        {{ form_row(registrationForm.plainPassword, {
+            label: 'Mot de passe',
+        }) }}
+        {{ form_row(registrationForm.agreeTerms, {
+            label: 'Accepter les conditions'
+        }) }}
 
-        <button type="submit" class="button">Register</button>
+        <button type="submit" class="button">Valider</button>
         {{ form_end(registrationForm) }}
     </div>
 </div>
