--- a/templates/vehicle/parts.html.twig
+++ b/templates/vehicle/parts.html.twig
@@ -42,4 +42,8 @@
                 <a class="button" href="{{ path('vehicle_parts_new', {vehicle: vehicle.id}) }}">Ajouter pièce</a>
     </section>
 
+<div class="navbar-container">
+    {% include "_navbar.html.twig" %}
+</div>
+
 {% endblock %}
