--- a/templates/part/edit.html.twig
+++ b/templates/part/edit.html.twig
@@ -3,11 +3,11 @@
 {% block title %}Edit Part{% endblock %}
 
 {% block body %}
-    <h1>Edit Part</h1>
+    <h1>Editer pièce</h1>
 
     {{ include('part/_form.html.twig', {'button_label': 'Update'}) }}
 
-    <a href="{{ path('part_index') }}">back to list</a>
+    <a href="{{ path('part_index') }}">Retour à la liste</a>
 
     {{ include('part/_delete_form.html.twig') }}
 {% endblock %}
