--- a/templates/part/new.html.twig
+++ b/templates/part/new.html.twig
@@ -3,9 +3,9 @@
 {% block title %}New Part{% endblock %}
 
 {% block body %}
-    <h1>Create new Part</h1>
+    <h1>Créer une nouvelle pièce</h1>
 
     {{ include('part/_form.html.twig') }}
 
-    <a href="{{ path('part_index') }}">back to list</a>
+    <a href="{{ path('part_index') }}">Retour à la liste</a>
 {% endblock %}
