--- a/templates/part/show.html.twig
+++ b/templates/part/show.html.twig
@@ -3,7 +3,7 @@
 {% block title %}Part{% endblock %}
 
 {% block body %}
-    <h1>Part</h1>
+    <h1>Pièces</h1>
 
     <table class="table">
         <tbody>
@@ -18,7 +18,7 @@
         </tbody>
     </table>
 
-    <a href="{{ path('part_index') }}">back to list</a>
+    <a href="{{ path('part_index') }}">Retour à la liste</a>
 
     <a href="{{ path('part_edit', {'id': part.id}) }}">edit</a>
 
