--- a/templates/user/login.html.twig
+++ b/templates/user/login.html.twig
@@ -22,7 +22,7 @@
                 {# If you want to control the URL the user is redirected to on success #}
                 <input type="hidden" name="_target_path" value="{{ path('vehicle_index') }}"/>
 
-                <button class="button login-button" type="submit">login</button>
+                <button class="button login-button" type="submit">Valider</button>
            </form>
         </div>
 	</div>
