--- a/templates/vehicle/show.html.twig
+++ b/templates/vehicle/show.html.twig
@@ -38,7 +38,7 @@
         </tbody>
     </table>
 
-    <a class="button" href="{{ path('vehicle_index') }}">back to list</a>
+    <a class="button" href="{{ path('vehicle_index') }}">Retour à la liste</a>
 
     <a class="button" href="{{ path('vehicle_edit', {'id': vehicle.id}) }}">edit</a>
 
