--- a/templates/vehicle/parts.html.twig
+++ b/templates/vehicle/parts.html.twig
@@ -29,8 +29,8 @@
             <div>
                 <div class="space-between">
                     <label for="{{ part.id }}">{{ part.name }}</label>
-                        <div>
-                            <a class="part-button" href="{{ path('vehicle_parts_edit', {vehicle: vehicle.id, part: part.id}) }}"><img class="fa-edit" src="{{ asset('build/images/edit-solid.svg') }}"></img></a>
+                        <div class="flex">
+                            <a href="{{ path('vehicle_parts_edit', {vehicle: vehicle.id, part: part.id}) }}"><img class="fa-edit" src="{{ asset('build/images/edit-solid.svg') }}"></img></a>
                             {{ include('vehicle/_delete_parts_form.html.twig') }}
                         </div>
                 </div>
@@ -39,7 +39,9 @@
             </div>
             {% endfor %}
         </div>
-                <a class="button" href="{{ path('vehicle_parts_new', {vehicle: vehicle.id}) }}">Ajouter pièce</a>
+        <div class="text-align-center">
+            <a class="button" href="{{ path('vehicle_parts_new', {vehicle: vehicle.id}) }}">Ajouter pièce</a>
+        </div>
     </section>
 
 {% endblock %}
