--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -206,7 +206,6 @@ label {
 }
 
 .fa-trash {
-    background-color:transparent;
     border: none;
 }
 
@@ -215,7 +214,9 @@ label {
 }
 
 .fa-trash-part {
-    width: 1.5rem;
+    width: 2rem;
+    margin-left: 1rem;
+    border: none;
 }
 
 .fa-edit-part {
