--- a/templates/vehicle/parts_new.html.twig
+++ b/templates/vehicle/parts_new.html.twig
@@ -9,5 +9,11 @@
         {{ include('part/_form.html.twig') }}
 
         <a class="link-style" href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}">Retour à la liste</a>
+
     </div>
+
+    <div class="navbar-container">
+    {% include "_navbar.html.twig" %}
+    </div>
+
 {% endblock %}
