--- a/templates/vehicle/parts_edit.html.twig
+++ b/templates/vehicle/parts_edit.html.twig
@@ -4,13 +4,16 @@
 
 {% block body %}
 
-<div class="text-align-center">
-    <h1 class="title-form">Modifier {{ part.name }}</h1>
+    <div class="text-align-center">
+        <h1 class="title-form">Modifier {{ part.name }}</h1>
 
     {{ include('part/_form.html.twig', {'button_label': 'Modifier'}) }}
 
     {{ include('vehicle/_delete_parts_form.html.twig') }}
     <a class="link-style" href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}">Retour à la liste</a>
 
-</div>
+    </div>
+    <div class="navbar-container">
+    {% include "_navbar.html.twig" %}
+    </div>
 {% endblock %}
