--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,5 +1,5 @@
 <div class="navbar">
     <a class="" href="{{ path('vehicle_index') }}">Home</a>
     <img src="{{ asset('build/images/logoNavbar.png') }}">
-    <a class="" href="{{ path('app_logout') }}">Menu</a>
+    <a class="" href="{{ path('app_logout') }}">Logout</a>
 </div>
