--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -53,7 +53,7 @@ body {
     text-align: center;
     font-size: 0.9em;
     margin: 2rem;
-    padding: 2rem;
+    padding: 1rem 2rem;
     border-radius: 100px;
     background-color: $color-blue;
     opacity: 0.8;
