correct scss progress part

--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -160,7 +160,7 @@ label {
 }
 
 .progress-part {
-    width: 22rem;
+    width: 70%;
     margin-bottom: 1.2rem;
     margin-top: 1.3rem;
     border-radius: 20px;
