--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -3,7 +3,7 @@
 $bg-color: #000014;
 $color-1: #6a6b6c;
 $color-2: #235e9c;
-$color-3: #a5a5a5;
+$color-3: #dfdfdf;
 $color-4: #75a8be;
 $color-5: #4f89ac;
 
