--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -31,6 +31,11 @@ body {
     flex-direction: column;
 }
 
+.register-form {
+    text-align: right;
+    margin-right: 2rem;
+}
+
 .space-between {
     display: flex;
     justify-content: space-between;
