--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -13,6 +13,7 @@
 
 		{% block javascripts %}
 			{{ encore_entry_script_tags('app') }}
+			<script src="https://kit.fontawesome.com/953772c3b8.js" crossorigin="anonymous"></script>
 		{% endblock %}
 	</head>
 	<body>
