--- a/assets/styles/app.scss
+++ b/assets/styles/app.scss
@@ -241,4 +241,10 @@ label {
     margin-right: 1rem;
 }
 
+.new-vehicle {
+    position: fixed;
+    right: 0;
+    bottom: 4rem;
+    z-index: 1;
+}
 // END FONT AWESOME ICONS
