--- a/templates/vehicle/index.html.twig
+++ b/templates/vehicle/index.html.twig
@@ -4,10 +4,12 @@
 
 {% block body %}
     <section class="flex container-column">
+        <div class="new-vehicle" >
+            <a href="{{ path('vehicle_new') }}"><img src="{{ asset('build/images/icons8.svg') }}"></img></a>
+        </div>
         {% for vehicle in user.vehicles %}
             <a class="button" href="{{ path('vehicle_parts', {vehicle: vehicle.id}) }}" ><p class="box">{{ vehicle.name }}<br>{{ vehicle.brand }} {{ vehicle.model }}</p></a>
         {% endfor %}
-            <a class="button" href="{{ path('vehicle_new') }}"> Ajouter </a>
     </section>
 
     {% include "_navbar.html.twig" %}
