--- a/templates/_navbar.html.twig
+++ b/templates/_navbar.html.twig
@@ -1,5 +1,5 @@
 <div class="navbar">
-    <a class="" href="{{ path('vehicle_index') }}"><img class="fa-solid fa-house" src="{{ asset('build/images/house-solid.svg') }}"></img></a>
+    <a class="" href="{{ path('vehicle_index') }}"><i class="fas fa-home"></i></a>
     <img src="{{ asset('build/images/Motorboxcf.png') }}">
-    <a class="" href="{{ path('app_logout') }}"><img class="fa-solid fa-house" src="{{ asset('build/images/bars-solid.svg') }}"></img></a>
+    <a class="" href="{{ path('app_logout') }}"><i class="fas fa-bars"></i></a>
 </div>
